// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChatRoomContainer /> should render 1`] = `
<DocumentFragment>
  .c3 {
  margin: 0;
  padding-bottom: 10px;
}

.c7 {
  padding: 15px 10px;
  width: calc(100% - 20px);
  border: 0;
  outline: none;
}

.c9 {
  width: 100%;
  font-weight: bold;
  -webkit-transition: all 0.2s ease-in 0s;
  transition: all 0.2s ease-in 0s;
  border: 0;
  cursor: pointer;
  outline: none;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c8 {
  width: 250px;
  padding-left: 10px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  overflow-x: auto;
  height: 100%;
}

.c5 > div {
  margin: 10px 0;
}

.c1 {
  font-size: 30px;
  grid-area: title;
  margin: 0;
}

.c2 {
  display: grid;
  grid-template-columns: 250px auto;
  width: 100%;
  height: calc(100% - 50px);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: calc(100% - 30px);
}

<div
    class="c0"
  >
    <h1
      class="c1"
    >
      Chat 
    </h1>
    <div
      class="c2"
    >
      <div
        class=""
      >
        <h2
          class="c3"
        >
          Usuários
        </h2>
      </div>
      <div
        class="c4"
      >
        <div
          class="c5"
        />
        <div
          class=""
        >
          <form
            class="c6"
            data-testid="messageBarSubmit"
          >
            <input
              class="c7"
              data-testid="messageBarInput"
              placeholder="Digite sua mensagem aqui..."
              value=""
            />
            <div
              class="c8"
            >
              <button
                class="c9"
                type="submit"
              >
                Enviar
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<ChatRoomContainer /> should render with name 1`] = `
<DocumentFragment>
  .c3 {
  margin: 0;
  padding-bottom: 10px;
}

.c7 {
  padding: 15px 10px;
  width: calc(100% - 20px);
  border: 0;
  outline: none;
}

.c9 {
  width: 100%;
  font-weight: bold;
  -webkit-transition: all 0.2s ease-in 0s;
  transition: all 0.2s ease-in 0s;
  border: 0;
  cursor: pointer;
  outline: none;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c8 {
  width: 250px;
  padding-left: 10px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  overflow-x: auto;
  height: 100%;
}

.c5 > div {
  margin: 10px 0;
}

.c1 {
  font-size: 30px;
  grid-area: title;
  margin: 0;
}

.c2 {
  display: grid;
  grid-template-columns: 250px auto;
  width: 100%;
  height: calc(100% - 50px);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: calc(100% - 30px);
}

<div
    class="c0"
  >
    <h1
      class="c1"
    >
      Chat teste
    </h1>
    <div
      class="c2"
    >
      <div
        class=""
      >
        <h2
          class="c3"
        >
          Usuários
        </h2>
      </div>
      <div
        class="c4"
      >
        <div
          class="c5"
        />
        <div
          class=""
        >
          <form
            class="c6"
            data-testid="messageBarSubmit"
          >
            <input
              class="c7"
              data-testid="messageBarInput"
              placeholder="Digite sua mensagem aqui..."
              value=""
            />
            <div
              class="c8"
            >
              <button
                class="c9"
                type="submit"
              >
                Enviar
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<ChatRoomContainer /> should render with users and messages 1`] = `
<DocumentFragment>
  .c3 {
  margin: 0;
  padding-bottom: 10px;
}

.c4 {
  padding: 5px 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 14px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  padding-left: 10px;
}

.c12 {
  padding: 15px 10px;
  width: calc(100% - 20px);
  border: 0;
  outline: none;
}

.c14 {
  width: 100%;
  font-weight: bold;
  -webkit-transition: all 0.2s ease-in 0s;
  transition: all 0.2s ease-in 0s;
  border: 0;
  cursor: pointer;
  outline: none;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c13 {
  width: 250px;
  padding-left: 10px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  overflow-x: auto;
  height: 100%;
}

.c7 > div {
  margin: 10px 0;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 5px;
}

.c9 {
  display: block;
  padding-right: 10px;
}

.c10 {
  padding-right: 5px;
}

.c1 {
  font-size: 30px;
  grid-area: title;
  margin: 0;
}

.c2 {
  display: grid;
  grid-template-columns: 250px auto;
  width: 100%;
  height: calc(100% - 50px);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: calc(100% - 30px);
}

<div
    class="c0"
  >
    <h1
      class="c1"
    >
      Chat 
    </h1>
    <div
      class="c2"
    >
      <div
        class=""
      >
        <h2
          class="c3"
        >
          Usuários
        </h2>
        <div
          class="c4"
        >
          <svg
            class=""
            focusable="false"
            role="img"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm89.6 32h-16.7c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16h-16.7C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4z"
              fill="currentColor"
            />
          </svg>
          <span
            class="c5"
          >
            romulo
          </span>
        </div>
        <div
          class="c4"
        >
          <svg
            class=""
            focusable="false"
            role="img"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm89.6 32h-16.7c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16h-16.7C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4z"
              fill="currentColor"
            />
          </svg>
          <span
            class="c5"
          >
            jorge
          </span>
        </div>
      </div>
      <div
        class="c6"
      >
        <div
          class="c7"
        >
          <div
            class="c8"
          >
            <span
              class="c9"
            >
              [Invalid Date]
            </span>
            <strong
              class="c10"
            >
              romulo:
            </strong>
            fala galera
          </div>
          <div
            class="c8"
          >
            <span
              class="c9"
            >
              [Invalid Date]
            </span>
            <strong
              class="c10"
            >
              Servidor:
            </strong>
            Jorge entrou na sala...
          </div>
        </div>
        <div
          class=""
        >
          <form
            class="c11"
            data-testid="messageBarSubmit"
          >
            <input
              class="c12"
              data-testid="messageBarInput"
              placeholder="Digite sua mensagem aqui..."
              value=""
            />
            <div
              class="c13"
            >
              <button
                class="c14"
                type="submit"
              >
                Enviar
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
